fixed nav bar on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,61 @@ nav a.nav-link {
     color: #FFFFFF; /* Foreground Elements color */
 }
 
+.navbar-toggler {
+    border: none;
+    background: none;
+}
+
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 30px;
+    height: 24px;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-toggler-icon::before,
+.navbar-toggler-icon::after,
+.navbar-toggler-icon span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-toggler-icon::before {
+    content: '';
+    top: 0;
+}
+
+.navbar-toggler-icon span {
+    content: '';
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.navbar-toggler-icon::after {
+    content: '';
+    bottom: 0;
+}
+
+.navbar-toggler-icon.open::before {
+    transform: rotate(45deg);
+    top: 50%;
+}
+
+.navbar-toggler-icon.open span {
+    opacity: 0;
+}
+
+.navbar-toggler-icon.open::after {
+    transform: rotate(-45deg);
+    bottom: 50%;
+}
+
 /* Hero Section Styles */
 .hero {
     background-color: #EE3E38; /* Background Elements color */
